# PAWN

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  ANALYSIS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.datagen  README.md  VOCAB_TRANSITION.md  pyproject.toml  rust_out  searchless_chess_vocabulary.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  claude.yml  docker.yml  sync-model-cards.yml  sync-to-hf.yml
cards/: hf_model_card.md.j2  theoretical_ceiling.json
cards/dataset/: pawn-lichess-full.md  pawn-stockfish-100m.md
cards/model/: pawn-base.md  pawn-large.md  pawn-small.md
configs/: cotrain_three_variants.json  distill_small_from_base.json
deploy/: .tmux.conf  Caddyfile  Dockerfile.lc0-extract  Dockerfile.lichess-extract  build.sh  claude-dev.sh  entrypoint-dev.sh  entrypoint-extract.sh  entrypoint-lc0.sh  entrypoint-lichess-parquet.sh  entrypoint-rosa-sweep.sh  entrypoint-run.sh  entrypoint.sh  pod-gpu-stats.sh  pod.sh  setup.sh  sync.sh  vast.sh
docs/: ACCURACY_CEILING.md  ADAPTERS.md  ARCHITECTURE.md  CEILING_POSTMORTEM.md  LEGACY.md  TRAINING.md  jax-migration.md  v2-parity-gaps.md
engine/: Cargo.toml  pyproject.toml
engine/python/chess_engine/: __init__.py
engine/src/: batch.rs  board.rs  diagnostic.rs  edgestats.rs  engine_gen.rs  extract.rs  labels.rs  lib.rs  pgn.rs  random.rs  rl_batch.rs  searchless_vocab.rs  types.rs  uci.rs  validate.rs  vocab.rs
pawn/: __init__.py  _sentinel.py  _torch_legacy_fixture.py  adapter_trainer.py  adapter_training.py  checkpoint.py  config.py  corpus.py  cotrain.py  data.py  data_utils.py  distill.py  eval.py  generation.py  gpu.py  legacy.py  lichess_cache.py  lichess_data.py  lichess_eval.py  logging.py  model.py  probes.py  run_config.py  shard_loader.py  specialized_clm.py  sweep.py  torch_loader.py  trainer.py  wandb_utils.py
pawn/adapters/: __init__.py  bottleneck.py  film.py  hybrid.py  lora.py  rosa.py  sparse.py  specialized_clm.py  unfreeze.py
pawn/dashboard/: __init__.py  __main__.py  charts.py  metrics.py  sol.py  theme.py
pawn/eval_suite/: __init__.py  bounds.py  corpus.py  diagnostics.py  generation.py  lichess.py  probes.py  viz.py  worker.py
pawn/jax/: __init__.py  adapter_trainer.py  checkpoint.py  config.py  corpus.py  eval.py  legacy.py  model.py  torch_loader.py  trainer.py
pawn/lab/: __init__.py  __main__.py  monitor.py  runner.py  server.py  state.py  sweep.py
prompts/: pareto_sweep.md
scripts/: backfill_metrics.py  benchmark.py  benchmark_stockfish_nodes.py  build_stockfish_for_host.sh  check_ceiling_run.sh  check_compact_pod.sh  check_datagen_pod.sh  check_progress.sh  compact_stockfish_dataset.py  compute_theoretical_ceiling.py  convert_published_checkpoints.py  datagen_reconcile_tier.py  datagen_with_hf_sync.py  eval_accuracy.py  eval_generation_jax.py  eval_jax.py  eval_probes.py  eval_probes_jax.py  eval_vs_stockfish.py  export_hf_repo.py  extract_lichess.sh  extract_lichess_parquet.py  generate_lc0_data.py  generate_model_cards.py  generate_searchless_vocab.py  generate_stockfish_data.py  migrate_sweep.sh  monitor_training.sh  profile_step.py  rebuild_lichess_parquet.py  rename_shards.py  run_evals_backbone.py  run_evals_local.py  run_evals_toplayer.py  run_optuna_trial.sh  setup_lc0_pod.sh  setup_rosa_pod.sh  setup_rosa_sweep.sh  split_dataset.py  sweep.py  (+16 more)
scripts/legacy/: check_rosa_pod.sh  run_no_outcome.sh  run_optuna_trial.sh  run_rosa_ratio_sweep.sh  setup_rosa_pod.sh  sweep.py  train_adapter.py  train_bottleneck.py  train_rosa.py  train_tiny.py
stockfish-datagen/: .gitignore  Cargo.toml  README.md
stockfish-datagen/examples/: README.md  bench_evallegal_14k.json  sf_large_distill_20M.json  smoke.json  stockfish_100m.json  stockfish_20m.json  tournament_cp_vs_v_T0.json
stockfish-datagen/external-patches/: 01-skip-tt-clear.patch  02-nnue-thp.patch  README.md
stockfish-datagen/patches/: 0001-evallegal-uci-extension.patch  0001-searchless-uci-extension.patch  README.md
stockfish-datagen/scripts/: build_patched_stockfish.sh
stockfish-datagen/src/: affinity.rs  config.rs  game.rs  lib.rs  main.rs  match_game.rs  numa.rs  outcome.rs  resume.rs  runner.rs  sampler.rs  seed.rs  shard.rs  stockfish.rs  tournament.rs
templates/: hf_model_card.md.j2  hf_model_card_template.md
tests/: BUGS.md  _jax_helpers.py  conftest.py  test_checkpoint.py  test_clm_format.py  test_enriched_pgn.py  test_graceful_shutdown.py  test_jax_adapter_trainer.py  test_jax_adapters.py  test_jax_adapters_bottleneck_hybrid_sparse.py  test_jax_adapters_extra.py  test_jax_adapters_rosa_specialized.py  test_jax_checkpoint.py  test_jax_corpus.py  test_jax_eval.py  test_jax_generation.py  test_jax_legacy.py  test_jax_lichess_eval.py  test_jax_model.py  test_jax_probes.py  test_jax_torch_loader.py  test_jax_trainer.py  test_jax_wandb_utils.py  test_model.py  test_public_api.py  test_rosa.py  test_sweep_rosa_ratio.py
tests/adapters/: conftest.py  test_bottleneck.py  test_film.py  test_hybrid.py  test_lora.py  test_rosa.py  test_sparse.py
tests/core/: conftest.py  test_checkpoint.py  test_config.py  test_gpu.py  test_logging.py  test_run_config.py
tests/eval/: conftest.py  test_bounds.py  test_corpus.py  test_diagnostics.py  test_generation.py  test_lichess.py  test_probes.py  test_viz.py  test_worker.py
tests/golden/: README.md
tests/lab/: conftest.py  test_dashboard_charts.py  test_dashboard_init.py  test_dashboard_metrics.py  test_monitor.py  test_runner.py  test_server.py  test_state.py  test_sweep.py
tests/model/: conftest.py  test_512_token.py  test_backward_compat.py  test_clm_format.py  test_data.py  test_data_utils.py  test_lichess_cache.py  test_lichess_data.py  test_model.py  test_shard_loader.py  test_specialized_clm.py
tests/scripts/: conftest.py  test_convert_published_checkpoints.py  test_datagen_hf_sync_safety.py  test_datagen_reconcile_tier.py  test_eval_jax.py  test_script_smoke.py  test_train_jax.py  test_train_jax_adapter.py
tests/training/: conftest.py  test_adapter_training.py  test_cotrain_lr.py  test_cotrain_resume.py  (+10 more)
(+3 files in other folders)
