[project]
name = "pawn"
version = "0.1.0"
description = "PAWN: Playstyle-Agnostic World-model Network for Chess"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
dependencies = [
    "chess-engine",
    "numpy~=2.2.0",
    "psutil>=5.9.0",
    "safetensors>=0.4.0",
    "tqdm~=4.67.0",
    "huggingface-hub>=0.20.0",
    # JAX training + eval (docs/jax-migration.md). CPU jaxlib by default;
    # the GPU-jaxlib lives in the rocm / cu128 extras.
    "jax>=0.6.0",
    "equinox>=0.13.0",
    "optax>=0.2.0",
    # Datagen tooling (scripts/compact_stockfish_dataset.py).
    "pyarrow>=23.0.1",
    # Dev
    "pyright>=1.1.0",
    "pytest~=9.0.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.100.0",
    "syrupy>=4.7.0",
]

[project.optional-dependencies]
# torch is kept as an extra alongside the JAX GPU backends because:
#   (1) the thin PyTorch loader at ``pawn.jax.torch_loader`` ships
#       alongside published JAX checkpoints for external non-JAX users
#       (``docs/jax-migration.md`` §3.5);
#   (2) ``pawn.jax._torch_legacy_fixture`` lets the legacy-converter
#       parity tests build a torch reference model.
# Neither path is exercised by ``pawn.jax.{model,trainer,adapters,eval}``,
# so the JAX surface stays torch-free under a CPU-jax install.
rocm = ["torch~=2.10.0", "triton-rocm>=3.6.0", "triton>=3.6.0"]
cu128 = ["torch~=2.10.0"]
torch-loader = ["torch~=2.10.0"]
# Dashboard (`pawn.dashboard`) — Solara web UI that reads
# ``logs/<run>/metrics.jsonl`` and renders per-run / per-trial
# charts. Optional: the training + eval surface doesn't depend on it.
# Launched via ``python -m pawn.dashboard --host 127.0.0.1 --port 8765 \
#   --log-dir logs``; on the Docker images Caddy reverse-proxies it
# on port 8888 (gated by ``PAWN_DASHBOARD`` env var; default on).
dashboard = [
    "solara>=1.0.0",
    "plotly>=5.18.0",
    "anywidget>=0.9.21",
    "pandas>=2.0.0",
    "starlette<1.0.0",  # solara incompatible with starlette 1.0
]
# Lab MCP server (``pawn.lab``) — FastMCP daemon that spawns
# GPU-isolated training subprocesses, polls their ``metrics.jsonl``,
# and drives Optuna sweeps. Optional: training + eval surface
# doesn't depend on it. Launched via ``python -m pawn.lab`` (stdio
# MCP) or used programmatically via ``pawn.lab.TrialRunner``.
lab = [
    "fastmcp>=2.0.0",
    "optuna>=4.0.0",
    "optuna-dashboard>=0.16.0",
]
# W&B (Weights & Biases) metrics-only integration (``pawn.wandb_utils``).
# Optional: the trainers run without it, writing only the local
# ``metrics.jsonl``. Enable per run via ``--wandb-mode online`` on
# either training driver.
wandb = ["wandb>=0.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pawn"]

[tool.uv.workspace]
members = ["engine"]

[tool.uv]
conflicts = [
    [
        { extra = "rocm" },
        { extra = "cu128" },
    ],
]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
chess-engine = { workspace = true }
torch = [
    { index = "pytorch-rocm", extra = "rocm" },
    { index = "pytorch-cu128", extra = "cu128" },
]
triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportMissingImports = "error"
include = ["pawn"]
# Dashboard uses dynamic Solara/plotly patterns pyright can't reason
# about (reactive `solara.use_state`, `px.line` chained kwargs, etc.).
# The module is an optional ``dashboard`` extra and never on the
# training / eval critical path; exclude from the default lint pass.
exclude = ["pawn/dashboard", "pawn/lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure-function / no-I/O tests",
    "integration: multi-module flows, may touch filesystem",
    "smoke: end-to-end sanity checks (import + minimal execution)",
    "slow: tests that take >5s (excluded from default CI)",
    "gpu: tests that require a CUDA/ROCm GPU",
    "known_bug: tests that document a currently-broken behavior (paired with xfail)",
]
