[package]
name = "ml-chess-engine-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance chess engine for ML training pipelines"

[lib]
name = "chess_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
shakmaty = "0.30"
once_cell = "1.19"

[features]
default = ["pyo3/extension-module"]
