[project]
name = "chess-engine"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy~=2.2.0",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "chess_engine._engine"
features = ["pyo3/extension-module"]
